update recommendation api and tables
